# AgnoStudy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
contexts/: learning_progress.md
examples/: 01_agent_basics.py  02_openai_compatible_agent.py  03_learning_basics.py  04_tools_basics.py  05_structured_output.py  06_builtin_tools_duckduckgo.py  07_custom_toolkit.py  08_sessions_history.py  09_learning_machine_memory.py  10_knowledge_rag_basics.py  11_knowledge_readers_and_filters.py  12_rag_tuning_basics.py  13_knowledge_multi_source_basics.py  14_knowledge_website_reader.py  15_knowledge_pdf_reader.py  16_team_coordinate_basics.py  17_knowledge_website_deep_crawl.py  18_rag_filtering_advanced.py  19_team_route_basics.py  20_team_broadcast_basics.py  21_team_tasks_basics.py  22_team_shared_knowledge.py  23_team_shared_tools.py  24_team_tasks_with_knowledge.py  25_integrated_app_skeleton.py  26_real_project_structure_basics.py  27_workflow_basics.py  28_workflow_grouped_steps.py  29_workflow_condition_basics.py  30_workflow_parallel_basics.py  __init__.py  agent_basics.py
knowledge_docs/: agno_advanced_track.md  agno_beginner_track.md  agno_course_map.json  agno_memory_notes.md  agno_rag_basics.md  agno_tools_notes.md
models/: __init__.py  openai_embedder.py  openai_model.py
scripts/: generate_knowledge_sample_pdf.py
study_assistant_app/: __init__.py  agents.py  app.py  knowledge.py  settings.py  team.py  tools.py
